# colpic

./: .gitignore  CMakeLists.txt  README.md  conandata.yml
app_compare/: CMakeLists.txt
app_compare/ColPic_X64/: CMakeLists.txt  ColPic_X64.def  build.cmd
app_compare/ColPic_X64/include/: colpiclib.h
app_compare/src/: main.cpp
app_converter/: CMakeLists.txt
app_converter/src/: arguments.cpp  arguments.h  gcode_handler.cpp  gcode_handler.h  global.h  main.cpp
app_decoder/: CMakeLists.txt
app_decoder/src/: arguments.cpp  arguments.h  main.cpp
app_encoder/: CMakeLists.txt
app_encoder/src/: arguments.cpp  arguments.h  main.cpp
app_png_resize/: CMakeLists.txt
app_png_resize/src/: main.cpp
colpic_core/: CMakeLists.txt
colpic_core/include/: image_scaler.h  png_decoder.h  png_encoder.h  rgb_converter.h  thumbnail_creator.h
colpic_core/src/: image_scaler.cpp  png_decoder.cpp  png_encoder.cpp  rgb_converter.cpp  thumbnail_creator.cpp
colpiclib/: CMakeLists.txt
colpiclib/include/: color_table.h  color_table_item.h  colors_handler.h  encoder.h  global.h  str_codec.h
colpiclib/src/: color_table.cpp  color_table_item.cpp  colors_handler.cpp  encoder.cpp  str_codec.cpp
